add application and infrastructure layer

--- a/ProjectManagement/ProjectManagement - Backup.csproj
+++ b/ProjectManagement/ProjectManagement - Backup.csproj
@@ -15,9 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProjectManagement.Application\ProjectManagement.Application.csproj" />
     <ProjectReference Include="..\ProjectManagement.Domain\ProjectManagement.Domain.csproj" />
-    <ProjectReference Include="..\ProjectManagement.Infrastructure\ProjectManagement.Infrastructure.csproj" />
+    <ProjectReference Include="..\ProjectManagement.Persistence\ProjectManagement.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
